--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,17 +1,20 @@
 .dialogs {
     display: grid;
-    grid-template-columns: 2Fr 10fr;
-
+    grid-template-columns: 2Fr 10Fr;
 
 }
 
-.dialogsItems {
+.dialogsItems img  {
     padding: 10px;
     color: white;
+    width: 60px;
+    height: 60px;
+
 }
 
 .dialogsItems .active{
     color:gold;
+
 
 }
 
@@ -23,3 +26,4 @@
 .messages .message {
 
 }
+
